model fixes for prod